force-app/main/default/objects/Service_Project__c/Service_Project__c.object-meta.xml
<CustomObject>
    <label>Service Project</label>
    <pluralLabel>Service Projects</pluralLabel>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Synthetic installation project shown to homeowners and partners in the portal.</description>
</CustomObject>