force-app/main/default/objects/Service_Project__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Service_Projects</relationshipName>
    <relationshipLabel>Service Projects</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>