force-app/main/default/objects/Service_Project__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Contract Signed</fullName><default>true</default><label>Contract Signed</label></value>
            <value><fullName>Site Survey</fullName><default>false</default><label>Site Survey</label></value>
            <value><fullName>Permitting</fullName><default>false</default><label>Permitting</label></value>
            <value><fullName>Installation</fullName><default>false</default><label>Installation</label></value>
            <value><fullName>Inspection</fullName><default>false</default><label>Inspection</label></value>
            <value><fullName>Activated</fullName><default>false</default><label>Activated</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>