force-app/main/default/objects/Service_Project__c/fields/System_Size_kW__c.field-meta.xml
<CustomField>
    <fullName>System_Size_kW__c</fullName>
    <label>System Size (kW)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>