force-app/main/default/objects/Service_Project__c/fields/Target_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Install_Date__c</fullName>
    <label>Target Install Date</label>
    <type>Date</type>
</CustomField>